# PHYMLY_man

./: CMakeLists.txt  README.md  Source.cpp  V1.sln  V1.vcxproj  compile.sh  config.conf  input.txt  interface_additional.conf  main  main.cpp
Debug/: V1.ilk  V1.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/V1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  V1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: PVS-Studio.cmake
inc/: visualization.hpp
include/: formula.hpp  visualization.hpp
include/files/: config_file.h
python interface/: main.py  python_ui_interface.py
python interface/output_files/: config_output.conf  temperature_matrix_output.txt
python_interface/: UI2.ui  compiles.py  how_to_use.txt  main.py  python_ui_interface.py
src/: formula.cpp  main.cpp  main2.cpp  main3.cpp  visualization.cpp
src/files/: config_file.cpp
